# calc-interpreter

./: .editorconfig  .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  setup.py
calc_interpreter/: __main__.py  evaluator.py  exception.py  lexer.py  parser.py  singleton.py  traversal.py
tests/: expressions.txt  invalid_numbers.txt  test_interpreter.py  test_lexer.py  valid_numbers.txt
tests/data/: expressions.txt  invalid_operations.txt  valid_numbers.txt
