[tool.poetry]
name = "calc-interpreter"
version = "0.1.0"
description = ""
authors = ["Dominik Nedvedik <dominik.nedvedik@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
